--- a/src/main/resources/com/graficador/viewsProcedure/pol-relat.fxml
+++ b/src/main/resources/com/graficador/viewsProcedure/pol-relat.fxml
@@ -7,7 +7,7 @@
     <children>
         <ImageView fitHeight="681.0" fitWidth="588.0" layoutX="9.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@images/encabezado/pol-relat.jpg" />
+                <Image url="@../images/encabezado/pol-relat.jpg" />
             </image>
         </ImageView>
     </children>
