--- a/src/main/resources/com/graficador/GB2D/view-menu.fxml
+++ b/src/main/resources/com/graficador/GB2D/view-menu.fxml
@@ -32,5 +32,10 @@
             <Font name="System Bold" size="14.0" />
          </font>
       </Button>
+      <Label layoutX="293.0" layoutY="216.0" text="TRANSFORMACIONES BASICAS">
+         <font>
+            <Font name="System Bold" size="16.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
