--- a/src/main/resources/com/graficador/views/view-graph.fxml
+++ b/src/main/resources/com/graficador/views/view-graph.fxml
@@ -92,5 +92,6 @@
             <Font name="System Bold" size="14.0" />
          </font>
       </Button>
+      <Button fx:id="AAAA" layoutX="974.0" layoutY="213.0" mnemonicParsing="false" text="Button" />
    </children>
 </Pane>
